# pool-manager

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PLAN.md  README.md  pool-manager.gpu.yaml  pool-manager.service  pool-manager.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: scheduling-strategies.md
examples/: README.md  local-test.yaml  pbs-alcf.yaml  sample_jobs.json  slurm-perlmutter.yaml  worker.sh
pool_manager/: __init__.py  __main__.py  config.py  log.py  manager.py  placement.py  scaling.py
pool_manager/scheduler/: __init__.py  base.py  htcondor_rest.py  local_subprocess.py  pbs_subprocess.py  slurm_rest.py  slurm_sfapi.py  slurm_subprocess.py  wrapper.py
pool_manager/work_queue/: __init__.py  base.py  condor.py  condor_python.py  condor_rest.py  condor_subprocess.py
tests/: test_condor_backends.py  test_config.py  test_local_backend.py  test_logging.py  test_manager_placement.py  test_placement.py  test_scaling.py  test_scheduler.py  test_slurm_sfapi.py  test_state_parsing.py  test_work_queue.py
