[project]
name = "pool-manager"
version = "0.1.0"
description = "HTCondor queue → HPC scheduler pool bridge"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "sfapi-client>=0.5.0",
]

[project.optional-dependencies]
htcondor = ["htcondor>=10.0"]
rest = ["httpx>=0.25"]
sfapi = ["sfapi_client>=0.5"]
dev = ["pytest>=7", "mypy>=1", "ruff>=0.1"]

[project.scripts]
pool-manager = "pool_manager.__main__:main"

[tool.uv]
package = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]

[dependency-groups]
dev = ["pytest>=7", "mypy>=1", "ruff>=0.1"]
rest = ["httpx>=0.25"]
sfapi = ["sfapi_client>=0.5"]
